@@ -444,7 +444,12 @@ void pgObject::ShowTree(frmMain *form, ctlTree *browser, ctlListView *properties
         }
     }
 
-    wxLogInfo(wxT("Displaying properties for ") + GetTypeName() + wxT(" ")+GetIdentifier());
+    // If the object is called '%', we need to special case it so
+    // wxLogInfo doesn't think it's a printf placeholder.
+    if (GetIdentifier() == wxT("%"))
+        wxLogInfo(wxT("Displaying properties for ") + GetTypeName() + wxT(" %%"));
+    else
+        wxLogInfo(wxT("Displaying properties for ") + GetTypeName() + wxT(" ")+GetIdentifier());
     if (form)
     {
         form->StartMsg(wxString::Format(_("Retrieving %s details"), GetTranslatedTypeName().c_str()));
