@@ -36,7 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2007-12-14 DP  1.8.1  Fix an line number error in the debugger seen with 
+2007-12-17 DP  1.8.1  Fix a crash that occured if an object called '%' was
+                      selected in the treeview, per Alexander Steffens.
+2007-12-14 DP  1.8.1  Fix a line number error in the debugger seen with 
                       procedures which start on the same line as the 'CREATE
                       PROCEDURE foo IS ...' Per report from Heikki Linnakangas.
 2007-12-14 GL  1.8.1  Cleanup the covering index control logic in the Foreign
